--- a/public/profile.css
+++ b/public/profile.css
@@ -70,41 +70,11 @@ h1 {
 	font-size: 25px;
 }
 
-/*.list-card {
-	display: inline-block;
-	width: 150px;
-	height: 150px;
-	margin-left: 20px;
-	margin-right: 20px;
-	border: 1px solid black;
-}
-
-.cards {
-   display: flex;
-   justify-content: space-around;
-   flex-direction: row;
-
-   flex-wrap: wrap;
-   height: 200px;
-   margin-left: 40px;
-}
-
 .card {
- 
-    border: 1px solid black;
-    width: 200px !important;
-  
-    margin-left: 30px;
-
-
-}*/
-
-.card {
-	display: inline-block;
-	/*border: 1px solid black;*/
-	margin-left: 80px;
-	margin-right: 40px;
-	width: 320px;
+	/*display: inline-block;*/
+	margin-right: 30px;
+	margin-left: 0;
+	width: 400px;
 	height: 250px;
 	margin-bottom: 80px;
 	background-color: white;
@@ -114,59 +84,24 @@ h1 {
 }
 
 .card-block {
-	padding-left: 30px;
+	padding-left: 25px;
 	padding-right: 10px;
 	padding-top: 15px;
 	margin-left: 14px;
 	margin-top: 20px;
 }
 
-@media screen and (min-width: 40em) {
-    .cards {
-    	display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-   }
- 
-    .card {
-    	flex: 0 1 calc(25% - 1em);
-    }
-}
- 
-@media screen and (min-width: 60em) {
-    .cards {
-    	flex: 0 1 calc(25% - 1em);
-   }
-     
-    .card {
-     }
-}
- 
- 
-@media screen and (min-width: 40em) {
-    .cards {
-    	display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-
-    .card {
-       flex: 0 1 calc(50% - 1em);
-    }
-}
-
 .card-title {
 	font-family: 'Poppins', sans-serif;
 	font-size: 30px;
 	color: #2A008B;
+	width: 300px;
 
 }
 
 .card-text {
-	/*margin-top: 15px;*/
 	font-size: 15px;
 	color: #2A008B;
-	
 }
 
 .view-list {
@@ -179,7 +114,6 @@ h1 {
 	border-radius: 4px;
 	font-family: 'Poppins', sans-serif;
 	float: left;
-	
 	margin-top: 30px;
 	position: absolute;
 	left:    30px;
@@ -191,6 +125,7 @@ h1 {
 	height: 40px;
 	float: right;
 	margin-right: 15px;
+
 }
 
 #list-info {
@@ -212,8 +147,6 @@ label {
 	font-family: 'Poppins', sans-serif;
 	color: #2A008B;
 	font-size: 15px;
-
-
 }
 
 #add-list-form {
@@ -223,7 +156,7 @@ label {
 
 .add-items {
 	height: 35px;
-	width: 230px;
+	width: 320px;
 	background-color: #2A008B;
 	border: none;
 	font-size: 16px;
@@ -235,7 +168,7 @@ label {
 }
 
 .input {
-	width: 230px;
+	width: 320px;
 	border: 2px solid #D2BFFF;
 	padding: 15px;
 	border-radius: 3px;
@@ -263,4 +196,74 @@ label {
 	margin-left: 30px;
 	font-family: 'Poppins', sans-serif;
 	font-size: 30px;
+}
+
+.list-section {
+	/*margin-left: 20px;*/
+	/*margin-right: 10px;*/
+}
+
+.section {
+	clear: both;
+	padding: 0px;
+	margin: 0px;
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
+/*  COLUMN SETUP  */
+.col {
+	display: block;
+	float:left;
+	margin: 3% 0 1% 1.6%;
+	margin-left: 30px;
+/*	margin-right: 40px;*/
+
+
+}
+/*.col:first-child { margin-left: 0; }*/
+
+/*  GROUPING  */
+.group:before,
+.group:after { content:""; display:table; }
+.group:after { clear:both;}
+.group { zoom:1; /* For IE 6/7 */ }
+
+.span_3_of_3 { width: 100%; }
+.span_2_of_3 { width: 66.13%; }
+/*.span_1_of_3 { width: 32.26%; }*/
+
+/*  GO FULL WIDTH BELOW 480 PIXELS */
+@media only screen and (max-width: 480px) {
+	.col {  margin: 1% 0 1% 0%; }
+	.span_3_of_3, .span_2_of_3, .span_1_of_3 { width: 100%; }
+}
+
+#footer {
+	left:0px;
+   	bottom:0px;
+   	height:100px;
+   	width:100%;
+}
+
+.link {
+	margin-left: 20px;
+	margin-right: 20px;
+	position: relative;
+	bottom: 10px;
+	display: inline-block;
+
+}
+
+.credit {
+	margin-left: 50px;
+	padding-top: 50px;
+	font-weight: 700;
+	position: relative;
+	bottom: 10px;
+	display: inline-block;
+	text-align: left;
+	color: white;
+	font-family: 'Poppins', sans-serif;
+
 }
