--- a/public/main.css
+++ b/public/main.css
@@ -182,6 +182,8 @@ section {
    	bottom:0px;
    	height:100px;
    	width:100%;
+   	margin-top: 200px;
+   	/*position: fixed;*/
 }
 
 .link {
@@ -196,6 +198,7 @@ section {
 .credit {
 	margin-left: 50px;
 	padding-top: 50px;
+	padding-bottom: 20px;
 	font-weight: 700;
 	position: relative;
 	bottom: 10px;
