--- a/public/profile.css
+++ b/public/profile.css
@@ -199,8 +199,7 @@ label {
 }
 
 .list-section {
-	/*margin-left: 20px;*/
-	/*margin-right: 10px;*/
+	min-width: 1000px;
 }
 
 .section {
@@ -244,6 +243,8 @@ label {
    	bottom:0px;
    	height:100px;
    	width:100%;
+   	margin-top: 200px;
+   	/*position: fixed;*/
 }
 
 .link {
@@ -258,6 +259,7 @@ label {
 .credit {
 	margin-left: 50px;
 	padding-top: 50px;
+	padding-bottom: 20px;
 	font-weight: 700;
 	position: relative;
 	bottom: 10px;
