--- a/public/profile.css
+++ b/public/profile.css
@@ -43,7 +43,7 @@ h1 {
 .create {
 	margin-top: 50px;
 	padding-top: 10px;
-	width:80px;
+	max-width:80px;
     height:80px;
     line-height:50px;
 	border: 4px solid white !important;
