--- a/public/main.css
+++ b/public/main.css
@@ -207,8 +207,14 @@ legend {
 	}
 }
 
+/*@media only screen and (min-width: 640px) {
+	.demo-1, .demo-2, .demo-3 {
+		min-width: 100%;
+	}
+}*/
 
-section {
+
+.section {
 	text-align: center;
 	margin: auto;
 }
