--- a/public/main.css
+++ b/public/main.css
@@ -8,6 +8,17 @@ body {
 	min-width: 1000px;
 }
 
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+
+  	body {
+  		min-width: 320px;
+  	}
+}
+
 nav {
 	height: 82px;
 	display: block;
