--- a/public/profile.css
+++ b/public/profile.css
@@ -14,6 +14,18 @@ body {
 	min-width: 1000px;
 }
 
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+
+  	body {
+  		min-width: 320px;
+  	}
+}
+
+
 .logout {
 	float: right;
 	margin-top: 20px;
@@ -26,6 +38,18 @@ body {
 	color: white;
 	border-radius: 4px;
 	font-family: 'Poppins', sans-serif;
+}
+
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+
+  	.logout {
+  		min-width: 120px;
+  	}
 }
 
 
@@ -57,6 +81,17 @@ h1 {
 	text-align: center;
 	background-color: transparent;
 
+}
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+
+  	.create {
+  		max-width: 80px;
+  	}
 }
 
 .pcreate {
