--- a/public/list.css
+++ b/public/list.css
@@ -21,6 +21,19 @@ h1 {
 
 }
 
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+  	.group {
+  		margin-left: auto;
+  		margin-right: auto;
+  		margin: auto;
+  	}
+
+}
+
 .list-info {
 	margin-left: 50px;
 	margin-right: 50px; 
