--- a/public/list.css
+++ b/public/list.css
@@ -19,6 +19,7 @@ h1 {
 	margin-right: auto;
 	margin-bottom: 100px;
 
+
 }
 
 @media only screen 
@@ -241,4 +242,22 @@ label {
 	margin: auto;
 	margin-left: auto;
 	margin-right: auto;
+	text-align: center;
+}
+
+form {
+	margin: auto;
+}
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+  	form {
+  		margin-left: auto;
+  		margin-right: auto;
+  		margin: auto;
+  	}
+
 }
