--- a/public/profile.css
+++ b/public/profile.css
@@ -62,6 +62,17 @@ h1 {
 
 }
 
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+  	.create {
+  		max-width: 2.5em;
+  	}
+
+}
+
 .pcreate {
 	text-align: center;
 	margin-top: 15px;
