--- a/public/profile.css
+++ b/public/profile.css
@@ -55,8 +55,8 @@ h1 {
 	font-size: 65px;
 	color: white;
 	border-radius: 50%;
-	text-align:center;
-	font-family: 'Poppins', sans-serif;
+/*	text-align:center;
+*/	font-family: 'Poppins', sans-serif;
 	text-align: center;
 	background-color: transparent;
 
