--- a/public/profile.css
+++ b/public/profile.css
@@ -48,6 +48,7 @@ h1 {
 	margin-top: 50px;
 	padding-top: 10px;
 	min-width:80px;
+	max-width:20px;
     height:80px;
     line-height:50px;
 	border: 4px solid white !important;
