--- a/public/profile.css
+++ b/public/profile.css
@@ -48,7 +48,6 @@ h1 {
 	margin-top: 50px;
 	padding-top: 10px;
 	min-width:80px;
-	max-width:20px;
     height:80px;
     line-height:50px;
 	border: 4px solid white !important;
@@ -70,7 +69,7 @@ h1 {
   and (orientation: portrait) {
   	.create {
   		max-width: 2.5em !important;
-  		max-height: 2.5em !important;
+  		max-height: 20px !important;
   		padding: none;
   		border-radius: 50px;
   	}
