--- a/public/profile.css
+++ b/public/profile.css
@@ -68,8 +68,8 @@ h1 {
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: portrait) {
   	.create {
-  		max-width: 2.5em !important;
-  		max-height: 20px !important;
+  		max-width: 10px !important;
+  		max-height: 10px !important;
   		padding: none;
   		border-radius: 50px;
   	}
