--- a/public/profile.css
+++ b/public/profile.css
@@ -51,12 +51,10 @@ h1 {
     height:80px;
     line-height:50px;
 	border: 4px solid white !important;
-	border: none;
 	font-size: 65px;
 	color: white;
 	border-radius: 50%;
-/*	text-align:center;
-*/	font-family: 'Poppins', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	text-align: center;
 	background-color: transparent;
 
