--- a/public/profile.css
+++ b/public/profile.css
@@ -70,7 +70,8 @@ h1 {
   		max-height: 10px !important;
   		padding: none;
   		border-radius: 50px;*/
-		border: none;
+		/*border: none;*/
+		border: 4px solid black;
 		
   	}
 
