--- a/public/profile.css
+++ b/public/profile.css
@@ -77,6 +77,38 @@ h1 {
 
 }
 
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+.create {
+  		/*max-width: 10px !important;
+  		max-height: 10px !important;
+  		padding: none;
+  		border-radius: 50px;*/
+		/*border: none;*/
+		border: 4px solid black;
+		
+  	}
+
+}
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+	  .create {
+  		/*max-width: 10px !important;
+  		max-height: 10px !important;
+  		padding: none;
+  		border-radius: 50px;*/
+		/*border: none;*/
+		border: 4px solid black;
+		
+  	}
+
+}
+
 .pcreate {
 	text-align: center;
 	margin-top: 15px;
