--- a/public/profile.css
+++ b/public/profile.css
@@ -72,7 +72,7 @@ h1 {
   		border-radius: 50px;*/
 		/*border: none;*/
 		border: 4px solid black;
-		
+		max-width: 5px;
   	}
 
 }
@@ -88,7 +88,7 @@ h1 {
   		border-radius: 50px;*/
 		/*border: none;*/
 		border: 4px solid black;
-		
+		max-width: 5px;
   	}
 
 }
@@ -104,6 +104,7 @@ h1 {
   		border-radius: 50px;*/
 		/*border: none;*/
 		border: 4px solid black;
+		max-width: 5px;
 		
   	}
 
