--- a/public/profile.css
+++ b/public/profile.css
@@ -71,8 +71,7 @@ h1 {
   		padding: none;
   		border-radius: 50px;*/
 		/*border: none;*/
-		border: 4px solid black;
-		max-width: 5px;
+		border: none;
   	}
 
 }
@@ -87,8 +86,7 @@ h1 {
   		padding: none;
   		border-radius: 50px;*/
 		/*border: none;*/
-		border: 4px solid black;
-		max-width: 5px;
+		border: none;
   	}
 
 }
@@ -103,8 +101,7 @@ h1 {
   		padding: none;
   		border-radius: 50px;*/
 		/*border: none;*/
-		border: 4px solid black;
-		max-width: 5px;
+		border: none;
 		
   	}
 
