--- a/public/profile.css
+++ b/public/profile.css
@@ -72,6 +72,7 @@ h1 {
   		border-radius: 50px;*/
 		/*border: none;*/
 		border: none;
+		display: none;
   	}
 
 }
@@ -87,6 +88,7 @@ h1 {
   		border-radius: 50px;*/
 		/*border: none;*/
 		border: none;
+		display: none;
   	}
 
 }
@@ -102,6 +104,7 @@ h1 {
   		border-radius: 50px;*/
 		/*border: none;*/
 		border: none;
+		display: none;
 		
   	}
 
