--- a/public/profile.css
+++ b/public/profile.css
@@ -71,8 +71,8 @@ h1 {
   		padding: none;
   		border-radius: 50px;*/
 		/*border: none;*/
-		border: none;
-		display: none;
+		border: 0px;
+		
   	}
 
 }
@@ -87,8 +87,8 @@ h1 {
   		padding: none;
   		border-radius: 50px;*/
 		/*border: none;*/
-		border: none;
-		display: none;
+		border: 0px;
+		
   	}
 
 }
@@ -103,8 +103,8 @@ h1 {
   		padding: none;
   		border-radius: 50px;*/
 		/*border: none;*/
-		border: none;
-		display: none;
+		border: 0px;
+		
 		
   	}
 
