--- a/public/profile.css
+++ b/public/profile.css
@@ -50,7 +50,8 @@ h1 {
 	min-width:80px;
     height:80px;
     line-height:50px;
-	border: 4px solid white !important;
+	/*border: 4px solid white !important;*/
+	border: none;
 	font-size: 65px;
 	color: white;
 	border-radius: 50%;
