--- a/public/profile.css
+++ b/public/profile.css
@@ -75,6 +75,9 @@ h1 {
 		border: 0px;
 		
   	}
+	.logout {
+		width: 200px;
+	}
 
 }
 
@@ -91,6 +94,9 @@ h1 {
 		border: 0px;
 		
   	}
+	  .logout {
+		width: 200px;
+	}
 
 }
 
@@ -108,6 +114,9 @@ h1 {
 		
 		
   	}
+	  .logout {
+		width: 200px;
+	}
 
 }
 
