--- a/public/list.css
+++ b/public/list.css
@@ -32,6 +32,39 @@ h1 {
   		margin-right: auto;
   		margin: auto;
   	}
+	   .logout {
+		width: 150px;
+	}
+
+}
+
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+	.group {
+  		margin-left: auto;
+  		margin-right: auto;
+  		margin: auto;
+  	}
+	  .logout {
+		width: 150px;
+	}
+
+}
+
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+	 .group {
+  		margin-left: auto;
+  		margin-right: auto;
+  		margin: auto;
+  	}
+	  .logout {
+		width: 150px;
+	}
 
 }
 
