--- a/public/list.css
+++ b/public/list.css
@@ -1,3 +1,9 @@
+* {
+	box-sizing: border-box;
+	margin: 0;
+  	padding: 0;
+}
+
 body {
 	background-image: linear-gradient(to right, #2A008B, #009092);
 }
