--- a/public/list.css
+++ b/public/list.css
@@ -84,6 +84,20 @@ h1 {
 	
 }
 
+.cancel {
+	text-align: center;
+	height: 35px;
+	width: 585px;
+	background-color: Transparent;
+	border: 3px solid white !important;
+	border: none;
+	font-size: 20px;
+	color: white;
+	border-radius: 4px;
+	font-family: 'Poppins', sans-serif;
+	margin-top: 20px;
+}
+
 .hidden {
 	display: none;
 }
